# ChangeLog for media-video/libav
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/libav/ChangeLog,v 1.241 2015/03/14 16:56:02 lu_zero Exp $

*libav-11.3 (14 Mar 2015)

  14 Mar 2015; Luca Barbato <lu_zero@gentoo.org> +libav-11.3.ebuild,
  -libav-11.1.ebuild, -libav-11.ebuild:
  Update version

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> libav-11.2.ebuild:
  add arm64 support, tested on A53 board

  30 Jan 2015; Michał Górny <mgorny@gentoo.org> libav-10.5.ebuild,
  libav-10.9999.ebuild, libav-11.1.ebuild, libav-11.2.ebuild,
  libav-11.9999.ebuild, libav-11.ebuild, libav-9.14.ebuild, libav-9.17.ebuild,
  libav-9999.ebuild, metadata.xml:
  Convert to CPU_FLAGS_X86.

*libav-11.2 (20 Jan 2015)

  20 Jan 2015; Luca Barbato <lu_zero@gentoo.org> +libav-11.2.ebuild:
  New point release

  08 Jan 2015; Andreas Schuerch <nativemad@gentoo.org> libav-9.17.ebuild:
  x86 stable, see bug 531832

  02 Jan 2015; Luca Barbato <lu_zero@gentoo.org> libav-9999.ebuild:
  Minor doc change

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libav-9.17.ebuild:
  Stable for sparc, wrt bug #531832

  24 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libav-9.17.ebuild:
  Stable for ppc64, wrt bug #531832

  24 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libav-9.17.ebuild:
  Stable for ppc, wrt bug #531832

  23 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libav-9.17.ebuild:
  Stable for alpha, wrt bug #531832

  20 Dec 2014; Markus Meier <maekke@gentoo.org> libav-9.17.ebuild:
  arm stable, bug #531832

  12 Dec 2014; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  USE='vaapi' is now global, removing it's description from metadata

  12 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libav-9.17.ebuild:
  Stable for ia64, wrt bug #531832

  08 Dec 2014; Jeroen Roovers <jer@gentoo.org> libav-9.17.ebuild:
  Stable for HPPA (bug #531832).

  07 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libav-9.17.ebuild: