@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST fate-10.tar.xz 558524508 SHA256 65779319ff75a5d93f20132a7c348db2ff6f0f0275fb64a23f81fbda6e44c1cb SHA512 5e569b899961d82c579d974eb13b8a5263ae7a83dc788119d6abf923c9c133029fd861960a85c316e0b0a0bd61722cc3bcb393a65d9d2c551084c0b1103cc582 WHIRLPOOL d9e0bb01ae809ca57a566ae804b9e30ff0239e43047a7f93d07ab0d31e95c7f06cadd651dd3badc2b906f34ffa12669cff87910ffe115f34c3279615f8afaddb
 DIST fate-11.tar.xz 691009480 SHA256 4de446ae8c665e9410475c58f6294720f34cfdb1f20d29bbc0ee2576f810d597 SHA512 f9dc152964e3f19cf32d5d4cbc923a2bd05ba3b0f8f3880122df79d32852ee9d4795a0bfd66d7a2925299e9e9533888df6103e212ea3e5cbfe799d17ffa2b433 WHIRLPOOL 11034760105d1028330712f5ead087dffc9edc119945d618f6b02b37f4599db4c575a04c72f77cd5c6f180dc8e8ac2c9c1786d748b759aef2efd38191fcc6361
 DIST fate-9.tar.xz 467671500 SHA256 27d10fd49267452ac787c3f43501a4a21d0ccaccc5ddd6d79d8a6150ee276532 SHA512 8e45539f2512ef915b37c857226c0243940259f269b8f99393b9defa3352d7b8c1fcc5078f4f0d40dc0509737f0c915e179cedcc77f71fe5d96b1b956169a202 WHIRLPOOL d280ac32c6d84f121be8d733774e72a4df3f2e84d71051aea509ef5ca3289c94fd548bf03ff12215e045bf20c83426c547e6b5eb446429d167f38af7c7aa9803
@@ -6,13 +9,27 @@ DIST libav-11.2.tar.xz 4855224 SHA256 48f4a36cd823f2449d1e45b114371033dc68f0e09f
 DIST libav-11.3.tar.xz 4858864 SHA256 12ae6c051967765ae5faeddf94c4584129ac0b18edb884afffc5fcedcdb5e030 SHA512 f25b9fb7392d5bb4df35937f79beae26bd8f6606f0ad7cdebf16963834eb9b423d882f6a3a44b5120a5d5d853c7c31bb8c3420a427cd2b360f41a48a6d5df284 WHIRLPOOL 721c4cbe7ee3f7307d24c0e4f1cc1f8ab8b0ccd50ddf88b77ecf1cae05f06fc80d7527e9f7a0a098a6d95d0e7fed50082aaffa07935eab6e9131f7c9be6e696c
 DIST libav-9.14.tar.xz 4077424 SHA256 e4baf0c2adbd941a827854794dd6af9c29cd2042b23501c5828e9b8e1725f61d SHA512 fa8e83cb92a5a565cd23c63467c64972a69a4cbd652b946c7891b73180b609890f67a6f89f009ed263fb9e2c769236f3a8f7f70b0fce4c4373fa93a49470c04d WHIRLPOOL 178ba6c6ad0ecd8ad59eb3bf7a0d4289a3c253d82981cf3ad454e3b222848ae4f875e37cfd280be43faa25a9614c445106555c9f3b5ee4497aec9d71f39ac1af
 DIST libav-9.17.tar.xz 4080028 SHA256 e32d5f152bce1de283c002a35eb6e71f265877633dee8a40db4d16381dd5d17c SHA512 20af83d4b6a23c159c2386b6592ba6a6acf3f2c54e8aeb16dd0c8a64d637fbde24f37b864698b1143c6802b64a7b5e8ddfe0e7601b35c35686a789e2b3232f5a WHIRLPOOL ec07b5dd116e87416a9841044e09a6ef9b124fe4882f53e88711a32813d3d3a1d71f5067854bbd553ecdadec401dbbb8b504bfc1c6966bfd5e2db79459fb9995
-EBUILD libav-10.5.ebuild 10356 SHA256 67e09a1281a571d77cc2e9e7fed26437d3c1fb628b116b31eaa123fbb393ba7e SHA512 219bb9bd193b145f7d4aaf77335860fb0997e89d9c0477e31afcaed942be109521184cc88a6d00de8d9a2b00e0503a21e80e6cdeb2d84fae85692500712ae04e WHIRLPOOL 093cfb317bffaef6fbaaa75d7be3fc0e91c7eed4c548f974f87b45d2b53825926f4252892e10e9b883128ea0acf61acd6a1f39a64518fa3e1dc328a9ccbcbfbe
-EBUILD libav-10.9999.ebuild 10377 SHA256 c2cc8d84fd0ec4f24d0d2a2fe0042760b11150c965bda8fecf37dccae888cb9e SHA512 e232f38cc72551b21c748b15ece1dc4dd6be23b18831ded9f6594ceab801d78aff670b184d979957be63b7bb90af8fc7cca8d57b72090b102109600003a0e76c WHIRLPOOL 2357f6e4773f0ed0e601d372490e0ed0e81fb7f193613ad02027b9eab9e794016714ab950fbacecd40c3a23689664f6df50a8497260a02aa5ddba398afe30df3
-EBUILD libav-11.2.ebuild 10605 SHA256 ecd6805a6d8a305a8e7cdc66e423c1e13b73edf3128f8620c1c78515d31f6329 SHA512 871f5ca196a7f662dc08269a893264513148c21369522502dc0cbdfcaf18b9d35d1a0f5c1eba068b163cb6a9529e9df3ebce7ba5dbf12a3af2ae3b43492be4e4 WHIRLPOOL 650c280d3318ab01895f80af9d738131dbbfcd9bbd08225490d52fc083ec9cedf193bf4978e95e1b478c355fef1178812c4ba8c89c3ccdeeab47c48390df3407
-EBUILD libav-11.3.ebuild 10665 SHA256 dd531625c672af0ce268742d592a7b0efc88ac827b03bdc45fbf278161d04c30 SHA512 4567f42d97f9ed4a3dba1aaffd808caaaaca997e585c103f06a1dd864591629fb1b18d121e163cf0b593fd4aa765931ce0b91f9cd5e86a7e2abef72073f63df9 WHIRLPOOL daa47171cf89964c65d01298213234d72e521f47fc634976f421a306d395f0be37067bcbaaacd778c547bf95167543a5fc9b9969a14aec236ee1e42c45a3e07b
-EBUILD libav-11.9999.ebuild 10608 SHA256 4b1a63c989a382876c85ed4548432d4e31c9c98eb0b59184482623d99a3c6e7d SHA512 359e8c3af6c9f7cc61978bef1a3594086399f6ae8215674eff6dec1f56e5aa5f77530ff62150a4a8a37dafd91168316e82e2959faf5cb825580eb7853a275dd3 WHIRLPOOL 5959e30f2b9e1b180d0c0d64dda513c839a63963131bf7998f7ee76809cb11f114ecd46a05d729fc605201bffb8e78495ba09ee6766c8b56e424561652d0a2d9
-EBUILD libav-9.14.ebuild 10276 SHA256 3654539f0b176329b35eea5aa3ab61509c95f7095f9d6a377a1063ccf4c379a3 SHA512 6ee72c171d020adca5d2dd1e92045fd47a1f0c693b522169a33395f4f2f9000fa390427b97a63c9786f771f0f7e5698abc9498f3cd8dd50e2844561f07d244f5 WHIRLPOOL e1aa7b946b876db58776534d979e5c1255bf51e9add860828e3a95141b93fe5e41dbbbfd1a12c6aa3dfa1e7f2dc6e004f7da11bbb09cd425af98a50b479d3c75
-EBUILD libav-9.17.ebuild 10276 SHA256 8a71f05c57cdbc845dfefa562bdfe0c832d9e38589ed26f0c61042750271f375 SHA512 3e396cdc15d60f56562bef3b1fbaa7b3c7c657a3ed237acafe2665ea5b7123dada20e2ea565d7d9a183959238bebb570bc676846edd8961062e2e67ca54863b8 WHIRLPOOL 5dd4bf0fa0bced174da6ce7a386d64e5739ed5cf87822a84ed85e7aa1d8f8befeee41c3f116a57623c977d34c551fa0e3dbad27ff932b22f5a7bf987d00ab966
-EBUILD libav-9999.ebuild 10556 SHA256 d4149e0f9c1db1062b1eb6ff1685791306be770a7e575d373bac76a9d419f879 SHA512 e4abac6b4c71e3c5d56ee676aebda142c007fc98ccd09409f1ffc013c60215aac76a71e005699310e49658f78a4e8c0037a20204fc4160e23001c50aee146ef5 WHIRLPOOL 82405a86b9a0c2346c0e9371e5467c4e8152cc5ff32891eec7654a7f3e56c020d1f5b47ef9568ac213efcb13933fb97da4b39bf8c48c7845e2e669f6a1eeb087
-MISC ChangeLog 36603 SHA256 eb7be2e8af476966177b0966fb165cfe5e76d53ef3b4544d11198d2df6f0c596 SHA512 974377a49e4d4082faa7acf9da78836ed8c255cd198a73ade9457c389a2fce0402c56845caa9beba85bb7653c988e216b5e37bd5765168931a6a5682f55610dd WHIRLPOOL 835680e8e05f93d73bd011d4584ed9675108b03022e3d0d1cb611b695b527f0a45df965e3640e2c6d5df9ab8e8e777a7e280812dd3827645f2e0f627e35a5796
-MISC metadata.xml 2449 SHA256 073a9f3607e777310034e044ea1bd770e6687d45a47e08f90c7bd94becb05f7e SHA512 8c42da6491959f87d5c79f4a6096feda1bb9cbb3d455d13b67ab21b5d2c043d047b230f529c4328a32ca5ff6c28b66831a68a2a162cb373fc3c81a8e520d6947 WHIRLPOOL 62ec23fc29ecc036b9d56b372e2c23b5691fbddd2e5ff6ba9cfd23ad241e5db26f3f13b06ebbdf85d165ebbc35c08e848d17e25490859de142015f4144dc3bb7
+EBUILD libav-10.5.ebuild 10367 SHA256 b7cfa219974d331103db55c353f2fac3227af7d122ceffce449a26c610a1987b SHA512 2e2689f79d2fdca3b2fe178daaf8daf824d83c054b4363a57d3c9cce8f25c729598a4277fc7780b08266c077d5104c369a5c5ee4b572f124f1e25150c1b26471 WHIRLPOOL a8f5bdf0125d0643deb3efcff89eeeab978bc6c2c640f408a9652fb6a818752f3ef2624b735a2b46b27559978eb8db1f21330faf5d1665723683ca19dc84023a
+EBUILD libav-10.9999.ebuild 10388 SHA256 70724344c51941c1337aedb41fe8c612da475e6319792df023431c6a592dbd98 SHA512 645fa6d6b52836495199bb0c853cd1b4d5fb7e3cf8d5f527ec2bc00c3af05c19d4c1ffc482f20250ba852228811fa40c45e9260f44fa0a0cb08c90559c4085c4 WHIRLPOOL acb022a3197cebab04edb539acbfc2153bd0405a5a1bfc7009ab1edb882f390abc9c3e75e72a7ba84b53a9e74c97b55526cdf457d3d74c53bfc717dcd5bdb958
+EBUILD libav-11.2.ebuild 10616 SHA256 42124947823e49bb1e21f1f0894afcd62e63cae379326b400208e4361fade063 SHA512 1d869210bb5e6a515e7cf1cae8482359adebe8af67f3f87afa758d62b0b92d855217410f4737ade3661a10c723fd1542cf95b5ed8376d8bce98b1e8366cf6d87 WHIRLPOOL 4d1a82a65ab65a8529e7097110748a2695d0b1aff7a366fa0157ac5920785c1b60aa74897a856fe0e2a54bc3ef7c7c542a0ce682e7b7fe98a7e2d4cef7362ec9
+EBUILD libav-11.3.ebuild 10619 SHA256 a0509df50ca4f76877131b94929ab1a508bede85987a061458695d28f6ddba54 SHA512 eecd66fe095b5ac8b215e4155b93cf651b9f2cc31503790f1d4b22e9b24d2a840c5adfb644568bbadc19f4017e17f3e58684380eb371af0002a227a04a984764 WHIRLPOOL 797004d94970982809696c31abd6d3bd7efb639d3787dd71806ff6b41f2563d865ab282c636e8b39ac6a93845f404e91b878573f8249b52b0774b3f1a00ae409
+EBUILD libav-11.9999.ebuild 10619 SHA256 ee231fbdc1cfe39d68176a8e20b3ce580eeec5eecd147918ce9a5c7c3b3e26e4 SHA512 eec873c524023768eb1d0bb7283343ad731eb13eb517cbd1e9c99305f78cbc75bd1c8fb304fcf0ff643261899f969e56fcd4b353a61fe2fad6aa150230b957cf WHIRLPOOL b4e4634711b8cf4b6c1cd1dc665a038980a397a0467cc58014517c25f84a01b3a09f24f8e0d2eff964d40b947db77400d0a12c1b1169f92e9de2244d87f53a20
+EBUILD libav-9.14.ebuild 10298 SHA256 9f6f9a255dd7d0d22e45d619e0600b76292ed117fd815cd9b7158e2e73db2e00 SHA512 6e697bc18741ed7a28d2b824f0453d3c6aaa8430f20560755d60104be2d13e8bc960cb6cf93081d236c46ecc75779c7277b00ed79c1e1d6081046fce7a1daf35 WHIRLPOOL 45de537cb07a4b455e48a8bf195903b14738a492712812ed9b099c96b6130d6a245e4a3f0715efd3c5844d5db3c4926b54f0b92fd5e7289f50955e04df292500
+EBUILD libav-9.17.ebuild 10298 SHA256 82ed31263576f7bd080c1d026e40ca1ad230d56786b97aa90f6740cf4ad40a77 SHA512 fdd52b89f16205392d601a971a4db34fc484f734ea8234699ffcd8bfa7aff6741fe71a6ad29c07d0bde54e18eab4dd5a30bd4360df6b1ef33091299028c342ea WHIRLPOOL d80678b9c4d4bd9995707bb734d20732016f4d70e910700db61942af1e94afbb7436a6946e62a07d2cc670a08a14e792b9018a8bec3837cd4a2d873ebe5e711e
+EBUILD libav-9999.ebuild 10567 SHA256 b615df5c29e28b629c66a8dfccc2cf0765cdf0c303186aefaa5772fb11fdc76b SHA512 8af25bfbdf78a5fb70a4d2562d7f732beeb5739a677977c82302cacc15c05cc68cf1d23e67b5c346488b1ef9c63bbb221bb904995e3f17552247c59c62d745a7 WHIRLPOOL 43892ed0b77a13bc0577ac52703fc5ee22d86adcead6b572a856d2e4027d5b7716a10a944f998cdd18627dc15cd673241190d16e59cffa1bb0a23525bce8aa58
+MISC ChangeLog 36904 SHA256 a0b1c95763b9596dd6cf3a3f8dc263775674e35f2aab03b63029f24a654ef6b4 SHA512 9615d1a7381d77635303184007f38f8b6de8537a2bb64f48f2205ca5611564bae0516fb1f0de70f037a8c30f885a5fea497ee906eb1cb5431ebd2cf8477703b9 WHIRLPOOL 2d50f8cbe530e7a168346608deb1af25d938abc7ee49f10a6caf1d455ae0b4d930608c421ba9405d0d57f49535821dbf656ebe8419e9dc5a8e707f843f6513ff
+MISC metadata.xml 2334 SHA256 93ac6a2bd29e5bc168de0f3549974d7b642ad915dfd5ae7c08790ddc09fe879f SHA512 b3dcb8f5bff20af0dc3f9a32618490ae72f01c6d752b77f3757c01d0a7b537b328e6b8997559038cd371ae6c4dfdf50b3d43d60b1e5fba2330592685d529afdb WHIRLPOOL 4b1076320e27d1abe311599e7617025f0a7c8c37947f80cf44aa0cdb1236248a7f57d2bc1cf9c659b8617d25e0ebf1a91a27966aee3bffa46794152b3db0855d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQGcBAEBCAAGBQJVBcJ/AAoJEJQzkH1pP7W4cHsL/jbSmYnp8Jp9d3/foVm4Byse
+p9TtTshQBmlRLPRUX3W2o+eNSZmyj9lScbaBcZNk0YT73E3iz+j24LB4qMhhhQZ7
+Pz+EldLQPP1NmFIHgODvjejGE7PqTRuLYQJN13jHiEdCyEiLmPE7PrSX2nOdp1E+
+/e+jzHlS6m08w1u45oCL3wM89vBT/EtL966qs97jl9aFtVEm6ecdNZ0oPR5AD4Pm
+DZCvhDvKY3lF6iFPiKEXWBdEGb6RUijpAiZ9mGIv0hXpWKs1ENMkDs93BdK9nIMs
+zLa85ggRn2B/+OQm1ZM/AZvPZ6Ai4BDIW6/KmL50/BTZz3hB1NOoHZ3pIY9ybEjf
+YaFU08Sne/F9TXsb0c3sQQelGxY7jchYkKm+qKudc/qH04nf1s+djas0iyZnbyXe
+QLFips4g6BjTy/mFsmFojfu+Wb2sx+xZOC/QHoArYBeSzs/AKZgQxPNEw3l16v1F
+gUIZgTUxovPao3iziSeYEbhmF9BgEOUpT2wNYu8/eQ==
+=0vEr
+-----END PGP SIGNATURE-----
